# QtSDL

./: .gitignore  CMakeLists.txt  README.md  doxygen.conf.in  init.sh
src/QtSDL/: CMakeLists.txt  QtSDL.qrc
src/QtSDL/src/QtSDLModule/: qmldir
src/QtSDL/src/public/: QtSDL.cpp  QtSDL.h
src/QtSDL/src/public/QtSDL/: global.h  global.h.in  qsdlevent.cpp  qsdlevent.h  qsdlgamepadaxisevent.cpp  qsdlgamepadaxisevent.h  qsdlgamepadbuttonevent.cpp  qsdlgamepadbuttonevent.h  qsdlgamepadevent.cpp  qsdlgamepadevent.h  qsdlgamepadsensorevent.cpp  qsdlgamepadsensorevent.h  qsdlgamepadtouchpadevent.cpp  qsdlgamepadtouchpadevent.h  sdleventmanager.cpp  sdleventmanager.h
src/example/: CMakeLists.txt
src/example/android/: AndroidManifest.xml.in
src/example/deploy/: QtSDL.json  QtSDL.json.in
tests/: tstMain.cpp
